# Sea_Battle

./: .dockerignore  .gitignore  API_EXAMPLES.md  README.md  check_placement.py  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile  main.cpp
backend/include/: game_engine.h  json_serializer.h  session_manager.h  types.h
backend/include/crow/middlewares/: jwt_auth.h
backend/src/: types.cpp
frontend/: eslint.config.js  package-lock.json
frontend/src/: App.tsx
frontend/src/components/: ErrorBoundary.tsx  GameBoard.module.css  GameBoard.tsx
frontend/src/contexts/: AppContext.tsx
frontend/src/pages/: BuildShip.module.css  BuildShip.tsx  CreateGame.module.css  CreateGame.tsx  ErrorPage.css  ErrorPage.tsx  GamePage.tsx  JoinGame.tsx  LoadingPage.css  LoadingPage.tsx  main.tsx
frontend/src/service/: GameWebSocket.ts  handleGameStart.ts
frontend/src/types/: serverMessages.ts
frontend/src/utils/: shipUtils.ts
nginx/: Dockerfile  nginx.conf
